--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -91,7 +91,7 @@
             if (content !== "") {
               var list = $("#result").children(); 
               if (list.length > 20)
-                $("#result").remove(list[list.length - 1]);  
+                list[list.length - 1].remove();
               $("#result").prepend(content);
             }
           }});
