--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -475,7 +475,7 @@
         width: 0.4em !important;
       }	
 
-      .key-space {
+      .key-spacer {
         border: none !important;
         background: none !important;
         box-shadow: none !important;
@@ -598,7 +598,7 @@
             <div data-key="-esc" class="key-word key">
             <span>Esc</span>
             </div>
-            <div class="key-space"></div>
+            <div class="key-spacer"></div>
             <div data-key="-f1" class="key-word key">
             <span>F1</span>
             </div>
@@ -648,19 +648,19 @@
               <span>Pause</span>
             </div>
             <div class="small-space"></div>
-            <div class="key-space">
+            <div class="key-spacer">
               <div>N</div>
               <div id="num-indicator" class="avua"></div>
             </div>
-            <div class="key-space">
+            <div class="key-spacer">
               <div>C</div>
               <div id="caps-indicator" class="avua"></div>
             </div>
-            <div class="key-space">
+            <div class="key-spacer">
               <div>S</div>
               <div id="scroll-indicator" class="avua"></div>
             </div>
-            <div class="key-space">
+            <div class="key-spacer">
             </div>
         </div>
         <div class="keyboard-row">
@@ -821,9 +821,9 @@
             <span>&crarr;</span>
             </div>
             <div class="small-space"></div>
-            <div class="key-space"></div>
-            <div class="key-space"></div>
-            <div class="key-space"></div>
+            <div class="key-spacer"></div>
+            <div class="key-spacer"></div>
+            <div class="key-spacer"></div>
             <div class="small-space"></div>
             <div class="key-double key" data-key="-kp4">
             <div>4</div>
@@ -836,7 +836,7 @@
             <div>6</div>
             <div>Right</div>
             </div>
-            <div class="key-space" style="z-index: -1;"></div>
+            <div class="key-spacer" style="z-index: -1;"></div>
         </div>
         <div class="keyboard-row">
             <div class="key-bottom key-word key-w7 key" data-key="-leftshift">
@@ -867,11 +867,11 @@
               <div class="key-bottom-left">Shift</div>
             </div>
             <div class="small-space"></div>
-            <div class="key-space"></div>
+            <div class="key-spacer"></div>
             <div class="key-letter key" data-key="-up">
                 <span>&uarr;</span>
             </div>
-            <div class="key-space"></div>
+            <div class="key-spacer"></div>
             <div class="small-space"></div>
             <div class="key-double key" data-key="-kp1">
             <div>1</div>
@@ -885,7 +885,7 @@
             <div>3</div>
             <div>PgDn</div>
             </div>
-            <div class="key-space" sytle="z-index: -1;"></div>
+            <div class="key-spacer" sytle="z-index: -1;"></div>
         </div>
         <div class="keyboard-row">
             <div class="key-bottom key-word key-w4 key" data-key="-leftctrl">
@@ -908,14 +908,14 @@
               <div class="avua" id="alt-r-hold-indicator"></div>
               <div class="key-bottom-left">Alt</div>
             </div>
-            <div class="key-double key-right key-space key" data-key="-spacebar">
+            <div class="key-double key-left key-space key" data-key="-spacebar">
             &nbsp;
             </div>
             <div class="key-bottom key-word key-w3 key" data-key="-rightalt">
               <div class="avua" id="alt-l-hold-indicator"></div>
               <div class="key-bottom-left">Alt</div>
             </div>
-            <div class="key-bottom key-word key--w1 key" data-key="-app">
+            <div class="key-bottom key-word key" data-key="-app">
               <div  class="key-bottom-left">
                 <div class="box">&nbsp;</div>
                 <div class="box">&nbsp;</div>
