--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -481,6 +481,7 @@
         box-shadow: none !important;
         width: 3em !important;
         color: black !important;
+        cursor: default;
       }
 
       .square {
@@ -639,26 +640,21 @@
             </div>
             <div class="small-space"></div>
             <div data-key="-prtscr" class="key-double key">
-                <span>PrtSc</span>
+              <span>PrtSc</span>
             </div>
             <div data-key="-scrlock" class="key-double key">
-              <span>ScrLk</span>
+              <div>ScrLk</div>
+              <div id="scroll-indicator" class="avua"></div>
             </div>
             <div data-key="-pause" class="key-double key">
               <span>Pause</span>
             </div>
             <div class="small-space"></div>
             <div class="key-spacer">
-              <div>N</div>
-              <div id="num-indicator" class="avua"></div>
             </div>
             <div class="key-spacer">
-              <div>C</div>
-              <div id="caps-indicator" class="avua"></div>
             </div>
             <div class="key-spacer">
-              <div>S</div>
-              <div id="scroll-indicator" class="avua"></div>
             </div>
             <div class="key-spacer">
             </div>
@@ -731,7 +727,8 @@
             </div>
             <div class="small-space"></div>
             <div class="key-double key" data-key="-numlock">
-              <span>NumLk</span>
+              <div>NumLk</div>
+              <div id="num-indicator" class="avua"></div>
             </div>
             <div class="key-letter key" data-key="-kpslash">
               <span>/</span>
@@ -799,6 +796,7 @@
         <div class="keyboard-row">
             <div class="key-bottom key-word key-w5 key" data-key="-capslock">
               <div class="key-bottom-left">CapsLk</div>
+              <div id="caps-indicator" class="avua"></div>
             </div>
             <div class="key-letter key" data-key="-a">A</div>
             <div class="key-letter key" data-key="-s">S</div>
