--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -135,6 +135,7 @@
           mouseHold = !mouseHold;
           udapteHold();
           callAjax('/cgi-bin/move?coords=' + JSON.stringify({ b: 1, x: 0, y: 0 }));
+          e.stopPropagation();
         });
 
         $('.key').on('click', function(e) {
