remove space lights

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -124,7 +124,8 @@
 
         $("#showkeyboard").click(function() {
           $("#div-keyboard").toggleClass("hiden");
-          size();
+          if($("#div-keyboard").is(":visible"))
+            size();
         });
 
         $("#showmouse").click(function() {
