--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -276,7 +276,7 @@
 
         function size () {
           var size = $("#div-keyboard").width() / 80;
-          keyboard.style.fontSize = size + 'px';
+          $("keyboard").style.fontSize = size + 'px';
         }
       });
     </script>
