--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -275,8 +275,7 @@
         });
 
         function size () {
-          var size = $("#div-keyboard").width() / 80;
-          $("keyboard").style.fontSize = size + 'px';
+          $("keyboard").style.fontSize = ($("#div-keyboard").width() / 80) + 'px';
         }
       });
     </script>
