--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -275,7 +275,7 @@
         });
 
         function size () {
-          $("keyboard").style.fontSize = ($("#div-keyboard").width() / 80) + 'px';
+          $(".keyboard").css('font-size', $("#div-keyboard").width() / 80 + 'px');
         }
       });
     </script>
