--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -280,6 +280,7 @@
       });
     </script>
     <style>
+
       body{
         -webkit-touch-callout: none;
         -webkit-user-select: none;
@@ -288,6 +289,8 @@
         -ms-user-select: none;
         user-select: none;
         font-family: Arial, Helvetica, sans-serif;
+        overflow: -moz-scrollbars-vertical; 
+        overflow-y: scroll;
       }
       h3 {
         text-align: center;
