--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js" type="application/javascript"></script>
-    <title>Trabalhator 3.5</title>
+    <title>Remote Keyboard</title>
     <script type="application/javascript">
       $(document).ready(function() {
         var mouse = null;
@@ -586,7 +586,7 @@
             <div id="kstop" class="button flex center">Stop</div>
           </div>
           <div class="flex center">
-            <h2>Trabalhator 3.5</h2>
+            <h2>Remote Keyboard</h2>
           </div>
           <div class="flex">
             <div id="mstart" class="button flex center">Start</div>
