--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -193,6 +193,7 @@
           altHold = false;
           ctrlHold = false;
           shiftHold = false;
+          metaHold = false;
           udapteHold();
         }
 
