new auto button

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -249,14 +249,14 @@
         }
         function updateEnabled () {
           if (mouseEnabled) {
-            $("#keyboard-indicator").addClass("on");
+            $("#keyboard-auto-indicator").addClass("on");
           } else {
-            $("#keyboard-indicator").removeClass("on");
+            $("#keyboard-auto-indicator").removeClass("on");
           }
           if (mouseEnabled) {
-            $("#mouse-indicator").addClass("on");
+            $("#mouse-auto-indicator").addClass("on");
           } else {
-            $("#mouse-indicator").removeClass("on");
+            $("#mouse-auto-indicator").removeClass("on");
           }
         }
 
