new auto button

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -115,7 +115,7 @@
                 list[list.length - 1].remove();
               $("#result").prepend(content);
             }
-            if (mouseEnabled) {
+            if (keyboardEnabled) {
               $("#keyboard-auto-indicator").addClass("on");
             } else {
               $("#keyboard-auto-indicator").removeClass("on");
